<resources>
    <string name="app_name">Weather App</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">Weather App</string>
    <string name="second_fragment_label">Current Weather</string>
    <string name="third_fragment_label">7 Day Forecast</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="enter_city_name">Enter City Name</string>
    <string name="current_weather">Current Weather</string>
    <string name="november_9th_2022">November 9th, 2022</string>
    <string name="farmington_hills_us">Farmington Hills, US</string>
    <string name="_0_f">0°F</string>
    <string name="weather_icon">weather icon</string>
    <string name="sunny">Sunny</string>
    <string name="wed_november_16">Wed, November 16</string>
    <string name="_7_day_forecast">7 Day Forecast</string>
    <string name="current">Current</string>
    <string name="change_city">Change City</string>
</resources>