<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/cardview_shadow_end_color"
    app:cardElevation="2dp"
    app:layout_marginBaseline="5dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/cardview_shadow_start_color"
        android:backgroundTint="?android:attr/textColorSecondary"
        android:elevation="0dp"
        android:minWidth="10dp"
        android:minHeight="10dp"
        android:padding="10dp">

        <TextView
            android:id="@+id/item_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:backgroundTint="@android:color/transparent"
            android:shadowColor="#171717"
            android:shadowDx="3"
            android:shadowDy="-3"
            android:shadowRadius="4"
            android:text="@string/wed_november_16"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="#B4B4B4"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="TextContrastCheck" />

        <ImageView
            android:id="@+id/item_icon"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@android:color/transparent"
            android:backgroundTint="?android:attr/textColorSecondary"
            android:contentDescription="@string/weather_icon"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/item_temp"
            app:layout_constraintStart_toEndOf="@+id/item_date"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@android:drawable/btn_star_big_on"
            tools:ignore="ImageContrastCheck" />

        <TextView
            android:id="@+id/item_temp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:backgroundTint="@android:color/transparent"
            android:shadowColor="#171717"
            android:shadowDx="3"
            android:shadowDy="3"
            android:shadowRadius="3"
            android:text="@string/_0_f"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="#B4B4B4"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="TextContrastCheck" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>